# dual_cam_yolo

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: simulation.launch.py
log/: latest_build
src/nodes/: video_publisher.cpp  yolo_detector.cpp
